Former-commit-id: 628f5d3148ca7761c8907b1a3773ba6c88bb5591

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1712,6 +1712,8 @@ adv_search_lbHeaderPerson = Person
 
 adv_search_lbHeaderSource = Quelle
 
+adv_search_lbHeaderCollection = Sammlung
+
 #Headers
 adv_search_lbHeaderWoP = Wort oder Ausdruck
 
