--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -119,7 +119,7 @@ BrowseByCreator = Autores
 
 BrowseByCreatorDesc = B\u00FAsqueda por el nombre del autor.
 
-BrowseByInitial = Letra inicial: 
+BrowseByInitial = Letra inicial\: 
 
 BrowseByOrg = Organizaciones 
 
@@ -1007,7 +1007,7 @@ SubmitItem_lblSubmitCopyrightNotice = Aviso de Copyright
 
 SubmitItem_lblSubmitCopyrightNoticeRelease = Usted est\u00E1 a punto de hacer p\u00FAblico un item con informaci\u00F3n de derechos. Por favor, aseg\u00FArese de que ha comprobado esta informaci\u00F3n.
 
-SubmitItem_lblSubmitCopyrightNoticeSubmit = Usted est\u00E1 a punto de enviar un item con informaci\u00F3n de derechos. Por favor aseg\u00FArese de que ha comprobado esta informaci\u00F3n!
+SubmitItem_lblSubmitCopyrightNoticeSubmit = Usted est\u00E1 a punto de enviar un item con informaci\u00F3n de derechos. Por favor aseg\u00FArese de que ha comprobado esta informaci\u00F3n\!
 
 SubmitItem_lblSubmitCreator = Creador
 
@@ -1177,7 +1177,7 @@ ViewItemFull_lblRollbackConfirm = Realmente desea reemplazar los datos existente
 
 ViewItemFull_lblShowGroup = mostrar
 
-ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
+ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan\: 
 
 ViewItemFull_lblSocialBookmarking_CiteULike = A\u00F1adir este item a  CiteULike.
 
@@ -1218,7 +1218,7 @@ ViewItemFull_lblSubHeaderFile = Ficheros
 #
 # ViewItem Full
 #
-ViewItemFull_lblSubHeaderItem = G\u00E9nero: 
+ViewItemFull_lblSubHeaderItem = G\u00E9nero\: 
 
 ViewItemFull_lblSubHeaderLocalTags = Etiquetas Locales
 
@@ -1257,7 +1257,7 @@ ViewItemLogPage = Log de Item
 
 ViewItemLog_Header = Log de Item 
 
-ViewItemLog_lblComment = Descripci\u00F3n :
+ViewItemLog_lblComment = Descripci\u00F3n \:
 
 ViewItemLog_lblCreate = Creado en 
 
@@ -1442,11 +1442,11 @@ ViewItem_lblAffiliatedOrganization1 = Orgaizaciones afiliadas:
 
 ViewItem_lblAffiliatedTo1 = Afiliado a:
 
-ViewItem_lblAlternativeTitle1 = T\u00EDtulo Alternativo:
+ViewItem_lblAlternativeTitle1 = T\u00EDtulo Alternativo\:
 
-ViewItem_lblCollectionName1 = Nombre de la Colecci\u00F3n:
+ViewItem_lblCollectionName1 = Nombre de la Colecci\u00F3n\:
 
-ViewItem_lblContentLanguage1 = Lengua de la Publicaci\u00F3n:
+ViewItem_lblContentLanguage1 = Lengua de la Publicaci\u00F3n\:
 
 ViewItem_lblCopyrightDate = Fecha de Copyright
 
@@ -1456,17 +1456,17 @@ ViewItem_lblCreator1 = Creador:
 
 ViewItem_lblDateAccepted = Aceptado
 
-ViewItem_lblDateAccepted1 = Fecha de aceptaci\u00F3n:
+ViewItem_lblDateAccepted1 = Fecha de aceptaci\u00F3n\:
 
 ViewItem_lblDateCreated = Creado
 
-ViewItem_lblDateCreated1 = Fecha de creaci\u00F3n:
+ViewItem_lblDateCreated1 = Fecha de creaci\u00F3n\:
 
 ViewItem_lblDateModified = Modificado
 
-ViewItem_lblDateModified1 = Fecha de modificaci\u00F3n:
+ViewItem_lblDateModified1 = Fecha de modificaci\u00F3n\:
 
-ViewItem_lblDatePublished1 = Fecha de publicaci\u00F3n:
+ViewItem_lblDatePublished1 = Fecha de publicaci\u00F3n\:
 
 ViewItem_lblDatePublishedInPrint = Publicado Impreso
 
@@ -1474,21 +1474,21 @@ ViewItem_lblDatePublishedOnline = Publicado en l\u00EDnea
 
 ViewItem_lblDateSubmitted = Enviado
 
-ViewItem_lblDateSubmitted1 = Fecha de env\u00EDo:
+ViewItem_lblDateSubmitted1 = Fecha de env\u00EDo\:
 
-ViewItem_lblDregreeType1 = Tipo de Grado acad\u00E9mico:
+ViewItem_lblDregreeType1 = Tipo de Grado acad\u00E9mico\:
 
 ViewItem_lblEvent1 = Evento:
 
 ViewItem_lblFile2 = Fichero:
 
-ViewItem_lblFileCitation = Citar este fichero como: 
+ViewItem_lblFileCitation = Citar este fichero como\: 
 
-ViewItem_lblFileDescription = Descripci\u00F3n: 
+ViewItem_lblFileDescription = Descripci\u00F3n\: 
 
-ViewItem_lblFileVisibility = Nivel - acceso: 
+ViewItem_lblFileVisibility = Nivel - acceso\: 
 
-ViewItem_lblGenre1 = G\u00E9nero:
+ViewItem_lblGenre1 = G\u00E9nero\:
 
 ViewItem_lblIdentifier1 = Identificador:
 
@@ -1501,7 +1501,7 @@ ViewItem_lblItemCitation1 = Citar este item como:
 
 ViewItem_lblItemID1 = Item ID:
 
-ViewItem_lblLastModified1 = \u00DAltima modificaci\u00F3n:
+ViewItem_lblLastModified1 = \u00DAltima modificaci\u00F3n\:
 
 ViewItem_lblLocation = Lugar:
 
@@ -1511,43 +1511,43 @@ ViewItem_lblOwner1 = Propietario:
 
 ViewItem_lblPublisher1 = Editor:
 
-ViewItem_lblRelation1 = Relaci\u00F3n:
+ViewItem_lblRelation1 = Relaci\u00F3n\:
 
-ViewItem_lblReviewType1 = Tipo de m\u00E9todo de revisi\u00F3n:
+ViewItem_lblReviewType1 = Tipo de m\u00E9todo de revisi\u00F3n\:
 
-ViewItem_lblSource = P\u00E1gina inicial: 
+ViewItem_lblSource = P\u00E1gina inicial\: 
 
-ViewItem_lblSourceAlternativeTitle = T\u00EDtulo Alternativo: 
+ViewItem_lblSourceAlternativeTitle = T\u00EDtulo Alternativo\: 
 
-ViewItem_lblSourceCreator = Creador: 
+ViewItem_lblSourceCreator = Creador\: 
 
-ViewItem_lblSourceEdition = Edici\u00F3n:
+ViewItem_lblSourceEdition = Edici\u00F3n\:
 
-ViewItem_lblSourceEndPage = \u00DAltima p\u00E1gina: 
+ViewItem_lblSourceEndPage = \u00DAltima p\u00E1gina\: 
 
-ViewItem_lblSourceIdentifier = Identificador: 
+ViewItem_lblSourceIdentifier = Identificador\: 
 
-ViewItem_lblSourceIssue = N\u00FAmero: 
+ViewItem_lblSourceIssue = N\u00FAmero\: 
 
 ViewItem_lblSourcePlace = Lugar:
 
 ViewItem_lblSourcePublisher = Editor:
 
-ViewItem_lblSourceSequenceNo = N\u00FAmero de Secuencia: 
+ViewItem_lblSourceSequenceNo = N\u00FAmero de Secuencia\: 
 
-ViewItem_lblSourceTitle = T\u00EDtulo: 
+ViewItem_lblSourceTitle = T\u00EDtulo\: 
 
-ViewItem_lblSourceVolume = Volumen: 
+ViewItem_lblSourceVolume = Volumen\: 
 
 ViewItem_lblSourceofSource = Fuente de la fuente
 
 ViewItem_lblSubject1 = palabras clave:
 
-ViewItem_lblTitle1 = T\u00EDtulo:
+ViewItem_lblTitle1 = T\u00EDtulo\:
 
-ViewItem_lblToc1 = \u00CDndice de contenidos:
+ViewItem_lblToc1 = \u00CDndice de contenidos\:
 
-ViewItem_lblTotalNumberOfPages1 = N\u00FAmero total de p\u00E1ginas:
+ViewItem_lblTotalNumberOfPages1 = N\u00FAmero total de p\u00E1ginas\:
 
 ViewItem_lblWithdrawalComment = Retirado
 
@@ -1701,6 +1701,8 @@ adv_search_lbHeaderPerson = Persona
 
 adv_search_lbHeaderSource = Fuente
 
+adv_search_lbHeaderCollection = Collection
+
 #Headers
 adv_search_lbHeaderWoP = Palabra o Frase
 
@@ -1802,7 +1804,7 @@ adv_search_lblSearchPerson_transcriber = Transcriptor
 adv_search_lblSearchPerson_translator = Traductor
 
 #Generic
-adv_search_lblSearchTerm = T\u00E9rmino de B\u00FAsqueda:
+adv_search_lblSearchTerm = T\u00E9rmino de B\u00FAsqueda\:
 
 adv_search_lblTo = To
 
@@ -1942,7 +1944,7 @@ easy_submission_lblFileDescription = Descripci\u00F3n
 
 easy_submission_lblFileEmbargo = embargado hasta
 
-easy_submission_lblFileFileDescription = Descripci\u00F3n de Fichero: 
+easy_submission_lblFileFileDescription = Descripci\u00F3n de Fichero\: 
 
 easy_submission_lblFileName = Nombre:
 
@@ -2027,7 +2029,7 @@ easy_submission_lblTotalNumberOfPages = N\u00FAmero total de p\u00E1ginas
 
 easy_submission_lblUploadBibtex = Cargar fichero BibTeX
 
-easy_submission_lblUploaded = Cargado: 
+easy_submission_lblUploaded = Cargado\: 
 
 easy_submission_lblYouCanFetch = Puede traer metadatos de un servicio externo o v\u00EDa ID eSciDoc.
 
@@ -2071,7 +2073,7 @@ export_btnExport = Ok
 
 export_lblExport = Exportar
 
-export_lblSimpleExport = Exportar: 
+export_lblSimpleExport = Exportar\: 
 
 faq = FAQ
 
@@ -2295,7 +2297,7 @@ remove = Eliminar
 #
 # Validation report output
 #
-restrictive_message = Restrictivo: 
+restrictive_message = Restrictivo\: 
 
 save = Guardar
 
@@ -2310,7 +2312,7 @@ search_lblAdvancedSearch_noresults = B\u00FAsqueda avanzada
 #
 search_lblIncludeFiles = Buscar en el interior de los ficheros
 
-search_lblSearch = Buscar items publicados\u0009
+search_lblSearch = Buscar items publicados\t
 
 skip_to_mainMenu = Vaya al Men\u00FA Principal
 
@@ -2353,7 +2355,7 @@ statistics_lblDownloads = Descargas
 
 statistics_lblFile = de 
 
-statistics_lblHeader = Estad\u00EDsticas por Item: 
+statistics_lblHeader = Estad\u00EDsticas por Item\: 
 
 statistics_lblInfo = Los datos estad\u00EDsticos se actualizan diariamente.
 
