--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1688,6 +1688,8 @@ adv_search_lbHeaderPerson = \u4F5C\u8005
 
 adv_search_lbHeaderSource = \u51FA\u7248\u7269
 
+adv_search_lbHeaderCollection = Collection
+
 #Headers
 adv_search_lbHeaderWoP = \u691C\u7D22\u8A9E\u53E5
 
