--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1184,7 +1184,7 @@ ViewItemFull_lblRollbackConfirm = Do you really want to replace the existing dat
 
 ViewItemFull_lblShowGroup = show
 
-ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan: 
+ViewItemFull_lblSocialBookmarkingDescription = eSciDoc PubMan\: 
 
 ViewItemFull_lblSocialBookmarking_CiteULike = Add this item to CiteULike.
 
@@ -1225,7 +1225,7 @@ ViewItemFull_lblSubHeaderFile = Files
 #
 # ViewItem Full
 #
-ViewItemFull_lblSubHeaderItem = Genre: 
+ViewItemFull_lblSubHeaderItem = Genre\: 
 
 #
 # JUS
@@ -1490,9 +1490,9 @@ ViewItem_lblEvent1 = Event:
 
 ViewItem_lblFile2 = File:
 
-ViewItem_lblFileCitation = Cite this file as: 
+ViewItem_lblFileCitation = Cite this file as\: 
 
-ViewItem_lblFileDescription = Description: 
+ViewItem_lblFileDescription = Description\: 
 
 ViewItem_lblGenre1 = Genre:
 
@@ -1523,29 +1523,29 @@ ViewItem_lblReviewType1 = Review type:
 
 ViewItem_lblSource = Source:
 
-ViewItem_lblSourceAlternativeTitle = Alternative Title: 
+ViewItem_lblSourceAlternativeTitle = Alternative Title\: 
 
-ViewItem_lblSourceCreator = Creator: 
+ViewItem_lblSourceCreator = Creator\: 
 
 ViewItem_lblSourceEdition = Edition:
 
-ViewItem_lblSourceEndPage = Endpage: 
+ViewItem_lblSourceEndPage = Endpage\: 
 
-ViewItem_lblSourceIdentifier = Identifier: 
+ViewItem_lblSourceIdentifier = Identifier\: 
 
-ViewItem_lblSourceIssue = Issue: 
+ViewItem_lblSourceIssue = Issue\: 
 
 ViewItem_lblSourcePlace = Place:
 
 ViewItem_lblSourcePublisher = Publisher:
 
-ViewItem_lblSourceSequenceNo = Sequence Number: 
+ViewItem_lblSourceSequenceNo = Sequence Number\: 
 
-ViewItem_lblSourceStartPage = Startpage: 
+ViewItem_lblSourceStartPage = Startpage\: 
 
-ViewItem_lblSourceTitle = Title: 
+ViewItem_lblSourceTitle = Title\: 
 
-ViewItem_lblSourceVolume = Volume: 
+ViewItem_lblSourceVolume = Volume\: 
 
 ViewItem_lblSourceofSource = Source of source
 
@@ -1710,6 +1710,8 @@ adv_search_lbHeaderOrgan = Organization
 adv_search_lbHeaderPerson = Person
 
 adv_search_lbHeaderSource = Source
+
+adv_search_lbHeaderCollection = Collection
 
 #Headers
 adv_search_lbHeaderWoP = Word or Phrase
@@ -1994,7 +1996,7 @@ easy_submission_lblFileDescription = Description
 
 easy_submission_lblFileEmbargo = embargoed till
 
-easy_submission_lblFileFileDescription = File Description: 
+easy_submission_lblFileFileDescription = File Description\: 
 
 easy_submission_lblFileName = Name:
 
@@ -2079,7 +2081,7 @@ easy_submission_lblTotalNumberOfPages = Total Number fo Pages
 
 easy_submission_lblUploadBibtex = Upload BibTeX file
 
-easy_submission_lblUploaded = Uploaded: 
+easy_submission_lblUploaded = Uploaded\: 
 
 easy_submission_lblYouCanFetch = You can fetch metadata from an external service or via eSciDoc ID.
 
@@ -2126,7 +2128,7 @@ export_btnExport = Ok
 
 export_lblExport = Export
 
-export_lblSimpleExport = Export: 
+export_lblSimpleExport = Export\: 
 
 faq = FAQ
 
@@ -2383,7 +2385,7 @@ remove = Remove
 #
 # Validation report output
 #
-restrictive_message = Restrictive: 
+restrictive_message = Restrictive\: 
 
 save = Save
 
@@ -2398,7 +2400,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items\u0009
+search_lblSearch = Search released items\t
 
 skip_to_mainMenu = Skip to Main Menu
 
@@ -2453,7 +2455,7 @@ statistics_lblDownloads = Downloads
 
 statistics_lblFile = of 
 
-statistics_lblHeader = Statistics for Item: 
+statistics_lblHeader = Statistics for Item\: 
 
 statistics_lblInfo = The statistic data is updated on a daily basis.
 
