PUBMAN-1520 implemented : Yearbook@PubMan
Former-commit-id: a92d37442491fd5c174b89131491ba18c4db1d31

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1617,6 +1617,8 @@ Year = Jahr
 
 YearbookCandidatesPage = Jahrbuch Kandidaten
 
+YearbookInvalidItemsPage = Ung\u00FCltige Datens\u00E4tze\u0009
+
 YearbookItemCreatePage = Erstelle Jahrbuch
 
 YearbookMembersPage = Jahrbuch Mitglieder
@@ -1690,6 +1692,8 @@ adv_search_filePublicAvailable = \u00F6ffentlich zug\u00E4nglich
 
 adv_search_fileRestrictedAccess = Zugangsbeschr\u00E4nkung
 
+adv_search_lbHeaderCollection = Sammlung
+
 adv_search_lbHeaderContentDetails = Inhalt & Details
 
 adv_search_lbHeaderDate = Datum
@@ -1711,8 +1715,6 @@ adv_search_lbHeaderOrgan = Organisation
 adv_search_lbHeaderPerson = Person
 
 adv_search_lbHeaderSource = Quelle
-
-adv_search_lbHeaderCollection = Sammlung
 
 #Headers
 adv_search_lbHeaderWoP = Wort oder Ausdruck
