--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1593,6 +1593,8 @@ Year = \u520A\u884C\u5E74
 
 YearbookCandidatesPage = Yearbook Candidates
 
+YearbookInvalidItemsPage = Invalid Items
+
 YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Yearbook Members
@@ -1666,6 +1668,8 @@ adv_search_filePublicAvailable = \u516C\u958B
 
 adv_search_fileRestrictedAccess = \u5236\u9650\u4ED8\u304D
 
+adv_search_lbHeaderCollection = Collection
+
 adv_search_lbHeaderContentDetails = \u305D\u306E\u4ED6\u8A73\u7D30
 
 adv_search_lbHeaderDate = \u65E5\u4ED8
@@ -1687,8 +1691,6 @@ adv_search_lbHeaderOrgan = \u4F5C\u8005\u6240\u5C5E
 adv_search_lbHeaderPerson = \u4F5C\u8005
 
 adv_search_lbHeaderSource = \u51FA\u7248\u7269
-
-adv_search_lbHeaderCollection = Collection
 
 #Headers
 adv_search_lbHeaderWoP = \u691C\u7D22\u8A9E\u53E5
