working paper deleted. Only paper is in according to http://colab.mpdl.mpg.de/mediawiki/ESciDoc_PublicationType_Encoding_Scheme
Former-commit-id: 763c715e77f976797c8395dfe4f22fb18736baf4

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -394,8 +394,6 @@ ENUM_GENRE_THESIS = Hochschulschrift
 
 ENUM_GENRE_WEB_PAGE = Webseite
 
-ENUM_GENRE_WORKING_PAPER = Arbeitspapier
-
 ENUM_IDENTIFIERTYPE_ = n.a.
 
 #Jus-specific Publication types END
@@ -1625,6 +1623,12 @@ YearbookMembersPage = Jahrbuch Mitglieder
 
 about = \u00DCber PubMan
 
+WorkspacesPage = Arbeitsbereiche
+
+ChooseWorkspacePage =  Arbeitsbereiche
+
+ImportWorkspacePage = Import
+
 #
 # Action menu
 #
@@ -2316,6 +2320,8 @@ mainMenu_lnkQAWorkspace = QA BEREICH
 
 mainMenu_lnkYearbookWorkspace = JAHRBUCH
 
+mainMenu_lnkWorkspaces = ARBEITSBEREICHE
+
 mpipksDesc = MPI PKS Klassifikation
 
 multipleImport_checkboxRollback = bei Fehlern zur\u00FCcksetzen
@@ -2481,6 +2487,8 @@ submission_lblAuthorCopyPaste = Sie k\u00F6nnen in dieses Feld eine Liste von Au
 submission_lblAuthorCopyPasteLabel = viele hinzuf\u00FCgen
 
 submission_lblDescription = Beschreibung
+
+submission_lblImportStart = Importmethode
 
 submission_lblMoreDetails = (mehr)
 
