--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -393,8 +393,6 @@ ENUM_GENRE_THESIS = Thesis
 
 ENUM_GENRE_WEB_PAGE = Web Page
 
-ENUM_GENRE_WORKING_PAPER = Working Paper
-
 ENUM_IDENTIFIERTYPE_ = n.a.
 
 #Jus-specific Publication types END
@@ -1624,6 +1622,12 @@ YearbookMembersPage = Yearbook Members
 
 about = About PubMan
 
+WorkspacesPage = Workspaces
+
+ChooseWorkspacePage =  Workspaces
+
+ImportWorkspacePage = Import
+
 #
 # Action menu
 #
@@ -2318,6 +2322,8 @@ mainMenu_lnkQAWorkspace = QA WORKSPACE
 
 mainMenu_lnkYearbookWorkspace = YEARBOOK
 
+mainMenu_lnkWorkspaces = WORKSPACES
+
 mpipksDesc = MPI PKS Classification
 
 multipleImport_checkboxRollback = Undo on error
@@ -2483,6 +2489,8 @@ submission_lblAuthorCopyPaste = You can copy or write authors to this field whic
 submission_lblAuthorCopyPasteLabel = Add multiple
 
 submission_lblDescription = Description
+
+submission_lblImportStart = Import Method
 
 submission_lblMoreDetails = (more)
 
