--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -375,8 +375,6 @@ ENUM_GENRE_THESIS = Tesis
 
 ENUM_GENRE_WEB_PAGE = P\u00E1gina Web 
 
-ENUM_GENRE_WORKING_PAPER = Documento de Trabajo  
-
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BIBTEX_CITEKEY = BibTex Citekey
@@ -1614,6 +1612,12 @@ YearbookMembersPage = Yearbook Members
 
 about = Sobre PubMan
 
+WorkspacesPage = Workspaces
+
+ChooseWorkspacePage =  Workspaces
+
+ImportWorkspacePage = Import
+
 #
 # Action menu
 #
@@ -2236,6 +2240,8 @@ mainMenu_lnkQAWorkspace = QA WORKSPACE
 
 mainMenu_lnkYearbookWorkspace = YEARBOOK
 
+mainMenu_lnkWorkspaces = WORKSPACES
+
 multipleImport_checkboxRollback = Deshacer si da error
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
@@ -2383,6 +2389,8 @@ submission_lblAuthorCopyPaste = Puede copiar o escribir los nombres de los autor
 submission_lblAuthorCopyPasteLabel = A\u00F1adir m\u00FAltiples
 
 submission_lblDescription = Descripci\u00F3n
+
+submission_lblImportStart = M\u00E9todo de Importar
 
 submission_lblMoreDetails = (m\u00E1s)
 
