--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -375,8 +375,6 @@ ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 
 ENUM_GENRE_WEB_PAGE = Web\u30DA\u30FC\u30B8
 
-ENUM_GENRE_WORKING_PAPER = \u30EF\u30FC\u30AD\u30F3\u30B0\u30DA\u30FC\u30D1\u30FC
-
 ENUM_IDENTIFIERTYPE_ = \u8A72\u5F53\u306A\u3057
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
@@ -1601,6 +1599,15 @@ YearbookMembersPage = Yearbook Members
 
 about = PubMan\u306B\u3064\u3044\u3066
 
+WorkspacesPage = Workspaces
+
+ChooseWorkspacePage =  Workspaces
+
+WorkspacesPage = Workspaces
+
+ChooseWorkspacePage =  Workspaces
+
+ImportWorkspacePage = Import
 #
 # Action menu
 #
@@ -2283,6 +2290,8 @@ mainMenu_lnkQAWorkspace = \u7BA1\u7406\u753B\u9762
 
 mainMenu_lnkYearbookWorkspace = YEARBOOK
 
+mainMenu_lnkWorkspaces = WORKSPACES 
+
 mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
 
 multipleImport_checkboxRollback = \u30A8\u30E9\u30FC\u6642\u306B\u51E6\u7406\u3092\u5DEE\u3057\u623B\u3059
@@ -2448,6 +2457,8 @@ submission_lblAuthorCopyPaste = \u8457\u8005\u60C5\u5831\u3092\u4EE5\u4E0B\u306E
 submission_lblAuthorCopyPasteLabel = \u8907\u6570\u8457\u8005\u3092\u8FFD\u52A0
 
 submission_lblDescription = \u8AAC\u660E
+
+submission_lblImportStart = Import Method
 
 submission_lblMoreDetails = (\u8A73\u7D30)
 
