Working paper changed to Paper
Former-commit-id: 6dee06a5c03987a5228bca4b250a8eed7dae8451

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -375,7 +375,7 @@ ENUM_GENRE_OPINION = Opinion
 
 ENUM_GENRE_OTHER = Other
 
-ENUM_GENRE_PAPER = Working Paper
+ENUM_GENRE_PAPER = Paper
 
 ENUM_GENRE_PATENT = Patent
 
@@ -1787,7 +1787,7 @@ adv_search_lblChkGenre_opinion = Opinion
 
 adv_search_lblChkGenre_other = Other
 
-adv_search_lblChkGenre_paper = Working Paper
+adv_search_lblChkGenre_paper = Paper
 
 adv_search_lblChkGenre_patent = Patent
 
