--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -357,7 +357,7 @@ ENUM_GENRE_OPINION = Opini\u00F3n
 
 ENUM_GENRE_OTHER = Otro
 
-ENUM_GENRE_PAPER = Caso de empresa - versi\u00F3n alumno
+ENUM_GENRE_PAPER = Documento de trabajo
 
 ENUM_GENRE_PATENT = Patente
 
