small changes in components availability, see: http://jira.mpdl.mpg.de/browse/PUBMAN-1783?focusedCommentId=23320&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#action_23320
Former-commit-id: 100858d5a7427b1b04300ee189740f2cf4650b44

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -521,9 +521,9 @@ ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = mit Dateien oder ext. Ref.
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = mit Datei(en)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = nur mit Datei(en) 
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = mit ext. Ref.
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = nur mit ext. Ref.
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = ohne Dateien und ext. Ref.
 
