--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -520,9 +520,9 @@ ENUM_REVIEWMETHOD_PEER = Peer
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = with file(s) or locator(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s) only
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s) only
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = without files and locators
 
