Former-commit-id: fe2d3c9e72298b00f38b46d26cb71fb1c06e2bb7

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -175,6 +175,12 @@ DisplayExportItemsPage = Liste der exportierten Datens\u00E4tze
 
 ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = Kurztitel
 
+ENUM_ALTERNATIVETITLETYPE_HTML = Html
+
+ENUM_ALTERNATIVETITLETYPE_LATEX = Latex
+
+ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
+
 ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
