--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -174,6 +174,12 @@ DisplayExportItemsPage = Exportar Lista de Items
 
 ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = T\u00EDtulo abreviado 
 
+ENUM_ALTERNATIVETITLETYPE_HTML = Html
+
+ENUM_ALTERNATIVETITLETYPE_LATEX = Latex
+
+ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
+
 ENUM_ALTERNATIVETITLETYPE_OTHER = Otro
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
