--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -174,6 +174,12 @@ DisplayExportItemsPage = Exported Itemlist
 
 ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = Abbreviation
 
+ENUM_ALTERNATIVETITLETYPE_HTML = Html
+
+ENUM_ALTERNATIVETITLETYPE_LATEX = Latex
+
+ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
+
 ENUM_ALTERNATIVETITLETYPE_OTHER = Other
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
@@ -825,7 +831,7 @@ Home_Header_Contact = Contact us
 
 Home_Header_Current = Current functionalities
 
-Home_Header_LastItems = Last Released Items
+Home_Header_LastItems = Most Recently Released Items
 
 Home_Header_LastItems_Disabled = Last items feed disabled due to non-productive environment
 
