--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -174,6 +174,12 @@ DisplayExportItemsPage = \u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u30A2\u30A4\u30C6\
 
 ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = \u7701\u7565\u5F62
 
+ENUM_ALTERNATIVETITLETYPE_HTML = Html
+
+ENUM_ALTERNATIVETITLETYPE_LATEX = Latex
+
+ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
+
 ENUM_ALTERNATIVETITLETYPE_OTHER = \u305D\u306E\u4ED6
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
