workspaces page, labels and tooltips
Former-commit-id: 4f34fd4ce78a387086d8d07c70a8f53f268c68ac

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -141,6 +141,34 @@ BrowseByYearDesc = Browsen nach Jahresangaben und Zugriff auf die entsprechenden
 #
 CartItemsPage = Ablage
 
+#
+# Choose Workspace
+#
+
+ChooseWorkspacePage =  Arbeitsbereich ausw\u00E4hlen
+
+chooseWorkspace_descImportWorkspace = Beschreibung Import Bereich Deutsch.
+
+chooseWorkspace_descQAWorkspace = Beschreibung QA Bereich Deutsch.
+
+chooseWorkspace_descReportWorkspace = Beschreibung  Report Bereich Deutsch.
+
+chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
+
+chooseWorkspace_lnkQAWorkspace = QA Bereich
+
+chooseWorkspace_lnkReportWorkspace = T\u00E4tigkeitsbericht Bereich
+
+chooseWorkspace_lnkYearbookWorkspace = Jahrbuch Bereich
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT BEREICH
+
+chooseWorkspace_optMenuQAWorkspace = QA BEREICH
+
+chooseWorkspace_optMenuReportWorkspace = T\u00C4TIGKEITSBERICHT BEREICH
+
+chooseWorkspace_optMenuYearbookWorkspace = JAHRBUCH BEREICH
+
 CollaboratorPage = Collaborator
 
 CollaboratorPage_group = Gruppe
@@ -1627,13 +1655,9 @@ YearbookItemCreatePage = Erstelle Jahrbuch
 
 YearbookMembersPage = Jahrbuch Mitglieder
 
-about = \u00DCber PubMan
-
 WorkspacesPage = Arbeitsbereiche
 
-ChooseWorkspacePage =  Arbeitsbereiche
-
-ImportWorkspacePage = Import
+about = \u00DCber PubMan
 
 #
 # Action menu
@@ -2322,10 +2346,6 @@ mainMenu_lnkHome = START
 
 mainMenu_lnkPolicy = Leitlinien&Impressum
 
-mainMenu_lnkQAWorkspace = QA BEREICH
-
-mainMenu_lnkYearbookWorkspace = JAHRBUCH
-
 mainMenu_lnkWorkspaces = ARBEITSBEREICHE
 
 mpipksDesc = MPI PKS Klassifikation
@@ -2494,8 +2514,6 @@ submission_lblAuthorCopyPasteLabel = viele hinzuf\u00FCgen
 
 submission_lblDescription = Beschreibung
 
-submission_lblImportStart = Importmethode
-
 submission_lblMoreDetails = (mehr)
 
 submission_lblSubmissionStart = Eingabemethode
@@ -2528,3 +2546,4 @@ viewItemFullPage = Datensatz ansehen
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
+
