--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -140,6 +140,33 @@ BrowseByYearDesc = Browse by year and view the corresponding items.
 #
 CartItemsPage = Basket
 
+#
+# Choose Workspace
+#
+ChooseWorkspacePage =  Choose Workspace
+
+chooseWorkspace_descImportWorkspace = Description Import Workspace English.
+
+chooseWorkspace_descQAWorkspace = Description QA Workspace English.
+
+chooseWorkspace_descReportWorkspace = Description Report Workspace English.
+
+chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace English.
+
+chooseWorkspace_lnkQAWorkspace = QA Workspace
+
+chooseWorkspace_lnkReportWorkspace = Report Workspace
+
+chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+
+chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+
+chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
+
+chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
+
 CollaboratorPage = Collaborator
 
 CollaboratorPage_group = Group
@@ -153,6 +180,7 @@ CreateNewRevision_ChooseCollection = Please choose a collection by clicking on t
 CreateNewRevision_ChooseCollection_lblReleased = Release Date
 
 CreateNewRevision_CreateNewRevision = Create new revision
+
 
 #
 # Create new revision
@@ -1626,13 +1654,9 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Yearbook Members
 
-about = About PubMan
-
 WorkspacesPage = Workspaces
 
-ChooseWorkspacePage =  Workspaces
-
-ImportWorkspacePage = Import
+about = About PubMan
 
 #
 # Action menu
@@ -2212,7 +2236,7 @@ import_workspace_submit_items = Submit
 
 import_workspace_submit_release_items = Release
 
-import_workspace_title = Import workspace
+import_workspace_title = Import Workspace
 
 #
 # Messages
@@ -2323,10 +2347,6 @@ mainMenu_lnkHelp = Help
 mainMenu_lnkHome = START
 
 mainMenu_lnkPolicy = Policy&Disclaimer
-
-mainMenu_lnkQAWorkspace = QA WORKSPACE
-
-mainMenu_lnkYearbookWorkspace = YEARBOOK
 
 mainMenu_lnkWorkspaces = WORKSPACES
 
@@ -2496,8 +2516,6 @@ submission_lblAuthorCopyPasteLabel = Add multiple
 
 submission_lblDescription = Description
 
-submission_lblImportStart = Import Method
-
 submission_lblMoreDetails = (more)
 
 submission_lblSubmissionStart = Submission Method
@@ -2528,3 +2546,4 @@ viewItemFullPage = View item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
