--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -140,6 +140,33 @@ BrowseByYearDesc = B\u00FAsqueda por a\u00F1o.
 #
 CartItemsPage = Cesta 
 
+#
+# Choose Workspace
+#
+ChooseWorkspacePage =  Elegir Workspace
+
+chooseWorkspace_descImportWorkspace = Description Import Workspace Spanish.
+
+chooseWorkspace_descQAWorkspace = Description QA Workspace Spanish.
+
+chooseWorkspace_descReportWorkspace = Description Report Workspace Spanish.
+
+chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Spanish.
+
+chooseWorkspace_lnkQAWorkspace = QA Workspace
+
+chooseWorkspace_lnkReportWorkspace = Report Workspace
+
+chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+
+chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+
+chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
+
+chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
+
 CollaboratorPage = Colaborador 
 
 CollaboratorPage_group = Grupo 
@@ -1616,13 +1643,9 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Yearbook Members
 
-about = Sobre PubMan
-
 WorkspacesPage = Workspaces
 
-ChooseWorkspacePage =  Workspaces
-
-ImportWorkspacePage = Import
+about = Sobre PubMan
 
 #
 # Action menu
@@ -2147,7 +2170,7 @@ import_workspace_submit_items = Enviar
 
 import_workspace_submit_release_items = Enviar y Publicar
 
-import_workspace_title = Importar workspace
+import_workspace_title = Importar Workspace
 
 #
 # Messages
@@ -2241,10 +2264,6 @@ mainMenu_lnkHelp = Ayuda
 mainMenu_lnkHome = INICIO
 
 mainMenu_lnkPolicy = Pol\u00EDtica y reclamaciones
-
-mainMenu_lnkQAWorkspace = QA WORKSPACE
-
-mainMenu_lnkYearbookWorkspace = YEARBOOK
 
 mainMenu_lnkWorkspaces = WORKSPACES
 
@@ -2396,8 +2415,6 @@ submission_lblAuthorCopyPasteLabel = A\u00F1adir m\u00FAltiples
 
 submission_lblDescription = Descripci\u00F3n
 
-submission_lblImportStart = M\u00E9todo de Importar
-
 submission_lblMoreDetails = (m\u00E1s)
 
 submission_lblSubmissionStart = M\u00E9todo de Env\u00EDo
@@ -2428,3 +2445,4 @@ viewItemFullPage = Ver Item
 warning_lblMessageHeader = Mensajes del Sistema y Advertencias:
 
 yes = S\u00ED
+
