--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -140,6 +140,34 @@ BrowseByYearDesc = \u520A\u884C\u5E74\u304A\u3088\u3073\u5E74\u3054\u3068\u306B\
 #
 CartItemsPage = \u4E00\u6642\u4FDD\u5B58
 
+#
+# Choose Workspace
+#
+
+ChooseWorkspacePage =  Choose Workspace
+
+chooseWorkspace_descImportWorkspace = Description Import Workspace Japanese.
+
+chooseWorkspace_descQAWorkspace = Description QA Workspace Japanese.
+
+chooseWorkspace_descReportWorkspace = Description Report Workspace Japanese.
+
+chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Japanese.
+
+chooseWorkspace_lnkQAWorkspace = QA Workspace
+
+chooseWorkspace_lnkReportWorkspace = Report Workspace
+
+chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+
+chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+
+chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
+
+chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
+
 CollaboratorPage = Collaborator
 
 CollaboratorPage_group = Group
@@ -1603,17 +1631,10 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Yearbook Members
 
+WorkspacesPage = Workspaces
+
 about = PubMan\u306B\u3064\u3044\u3066
 
-WorkspacesPage = Workspaces
-
-ChooseWorkspacePage =  Workspaces
-
-WorkspacesPage = Workspaces
-
-ChooseWorkspacePage =  Workspaces
-
-ImportWorkspacePage = Import
 #
 # Action menu
 #
@@ -2292,10 +2313,6 @@ mainMenu_lnkHome = \u30DB\u30FC\u30E0
 
 mainMenu_lnkPolicy = \u30DD\u30EA\u30B7\u30FC/\u514D\u8CAC\u4E8B\u9805
 
-mainMenu_lnkQAWorkspace = \u7BA1\u7406\u753B\u9762
-
-mainMenu_lnkYearbookWorkspace = YEARBOOK
-
 mainMenu_lnkWorkspaces = WORKSPACES 
 
 mpipksDesc = MPI PKS\u5206\u985E\u8868 (MPI PKS Classification)
@@ -2464,8 +2481,6 @@ submission_lblAuthorCopyPasteLabel = \u8907\u6570\u8457\u8005\u3092\u8FFD\u52A0
 
 submission_lblDescription = \u8AAC\u660E
 
-submission_lblImportStart = Import Method
-
 submission_lblMoreDetails = (\u8A73\u7D30)
 
 submission_lblSubmissionStart = \u767B\u9332\u958B\u59CB
@@ -2496,3 +2511,4 @@ viewItemFullPage = \u8A73\u7D30\u8868\u793A
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
 yes = \u62DB\u5F85
+
