--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -191,6 +191,8 @@ basket_SingleAlreadyInBasket = Der Datensatz ist bereits in der Ablage.
 
 basket_SingleRemovedSuccessfully = Der Datensatz wurde aus der Ablage entfernt.
 
+chooseWorkspace = Bitte w\u00E4hlen Sie einen Arbeitsbereich aus, in dem Sie die Datens\u00E4tze bearbeiten wollen.
+
 copyright = \u00A9 2007 Max Planck Gesellschaft
 
 #
