--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -34,6 +34,8 @@ Affiliations_reloaded = ... affiliation tree was reloaded.
 
 AuthorNotProvided = A creator of type author has to be provided.
 
+chooseWorkspace = Please choose a workspace to edit the items.
+
 ComponentContentCategoryNotProvided = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.).
 
 ComponentContentCategoryNotProvidedEasySubmission = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.). Please add this information and upload the file again.
