--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -34,6 +34,8 @@ Affiliations_reloaded = ... el \u00E1rbol de afiliaci\u00F3n se ha recargado.
 
 AuthorNotProvided = Tiene que proporcionar un creador en el tipo de autor.
 
+chooseWorkspace = Please choose a workspace to edit the items.
+
 ComponentContentCategoryNotProvided = Falta definir un tipo de contenido para el fichero adjuntado (ej. Resumen, Pre-print, etc.)
 
 ComponentContentCategoryNotProvidedEasySubmission = Falta definir un tipo de contenido para el fichero adjuntado (ej. resumen, Pre-print, etc.). Por favor, a\u00F1ada esta informaci\u00F3n y vuelva a cargar el fichero.
