--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -748,11 +748,13 @@ Login_changeLanguage = Sprache \u00E4ndern
 # Login
 Login_login_logout = Login/Logout
 
-MainMenu_QAWSPage = Gehe zur QA Arbeitsplatz Seite.
+MainMenu_WorkspacesPage = Gehe zu Arbeitsplatz Seite.
 
 MainMenu_cartItemsPage = Gehe zur Ablage.
 
 MainMenu_depWorkspace = Gehe zum Depositor Arbeitsplatz.
+
+MainMenu_ImportWorkspacesPage = Gehe zu Import Seite.
 
 # Main Menu
 MainMenu_myItems = Gehe zum Depositor Arbeitsplatz.
@@ -2028,3 +2030,11 @@ viewItem_download = Datei herunterladen
 warning_lblMessageHeader = Systemnachrichten and Warnungen:
 
 yes = Ja
+
+chooseWorkspace_ImportWorkspace = Gehe zur Import Bereich Seite.
+
+chooseWorkspace_QAWorkspace = Gehe zur QA Arbeitsplatz Seite.
+
+chooseWorkspace_ReportWorkspace = Gehe zur Tätigkeitsbericht Arbeitsplatz Seite.
+
+chooseWorkspace_YearbookWorkspace = Gehe zur Jahrbuch Arbeitsplatz Seite.
