--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -750,8 +750,6 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login/Logout
 
-MainMenu_QAWSPage = Go to QA Workspace Page.
-
 MainMenu_cartItemsPage = Go to Basket page.
 
 MainMenu_depWorkspace = Go to Depositor Workspace.
@@ -2037,3 +2035,12 @@ viewItem_download = Download File
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
+chooseWorkspace_ImportWorkspace = Go to Import Workspace Page.
+
+chooseWorkspace_QAWorkspace = Go to QA Workspace Page.
+
+chooseWorkspace_ReportWorkspace = Go to Report Workspace Page.
+
+chooseWorkspace_YearbookWorkspace = Go to Yearbook Workspace Page.
+
