--- a/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_es.properties
@@ -745,11 +745,9 @@ Login_changeLanguage = Cambiar Lengua
 # Login
 Login_login_logout = Login/Logout
 
-MainMenu_QAWSPage = Ir a la página de QA Workspace.
+MainMenu_WorkspacesPage = Ir a la página de Workspaces.
 
 MainMenu_cartItemsPage = Ir a la página de la Cesta.
-
-MainMenu_depWorkspace = Ir a la página del área de trabajo del Depositante.
 
 # Main Menu
 MainMenu_myItems = Ir al área de trabajo.
@@ -1998,3 +1996,12 @@ viewItem_download = Cargar fichero
 warning_lblMessageHeader = Mensajes de Sistema y avisos:
 
 yes = Sí
+
+chooseWorkspace_ImportWorkspace = Ir a la página de Import Workspace.
+
+chooseWorkspace_QAWorkspace = Ir a la página de QA Workspace.
+
+chooseWorkspace_ReportWorkspace = Ir a la página de Report Workspace.
+
+chooseWorkspace_YearbookWorkspace = Ir a la página de Yearbook Workspace.
+
