--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -748,7 +748,7 @@ Login_changeLanguage = Change Language
 # Login
 Login_login_logout = Login /Logout
 
-MainMenu_QAWSPage = \u7BA1\u7406\u753B\u9762\u306B\u884C\u304F
+MainMenu_WorkspacesPage = Go to Workspaces Page.
 
 MainMenu_cartItemsPage = \u4E00\u6642\u4FDD\u5B58\u306E\u767B\u9332\u5185\u5BB9\u3092\u898B\u308B
 
@@ -2035,3 +2035,12 @@ viewItem_download = \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9:
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
+chooseWorkspace_ImportWorkspace = Go to Import Workspace Page.
+
+chooseWorkspace_QAWorkspace =  \u7BA1\u7406\u753B\u9762\u306B\u884C\u304F
+
+chooseWorkspace_ReportWorkspace = Go to Report Workspace Page.
+
+chooseWorkspace_YearbookWorkspace = Go to Yearbook Workspace Page.
+
