--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -34,6 +34,8 @@ Affiliations_reloaded = ... \u7D44\u7E54\u56F3\u60C5\u5831\u3092\u518D\u8AAD\u30
 
 AuthorNotProvided = \u8457\u8005\u306E\u7A2E\u5225\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
+chooseWorkspace = Please choose a workspace to edit the items.
+
 ComponentContentCategoryNotProvided = \u767B\u9332\u30D5\u30A1\u30A4\u30EB\u306E\u5185\u5BB9\u7A2E\u5225\uFF08\u8981\u65E8\u3001\u30D7\u30EC\u30D7\u30EA\u30F3\u30C8\u306A\u3069\uFF09\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
 ComponentContentCategoryNotProvidedEasySubmission = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.). Please add this information and upload the file again.
