--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -2035,6 +2035,6 @@ chooseWorkspace_ImportWorkspace = Gehe zur Import Bereich Seite.
 
 chooseWorkspace_QAWorkspace = Gehe zur QA Arbeitsplatz Seite.
 
-chooseWorkspace_ReportWorkspace = Gehe zur Tätigkeitsbericht Arbeitsplatz Seite.
+chooseWorkspace_ReportWorkspace = Gehe zur T\u00E4tigkeitsbericht Arbeitsplatz Seite.
 
 chooseWorkspace_YearbookWorkspace = Gehe zur Jahrbuch Arbeitsplatz Seite.
